--- a/css/styles.css
+++ b/css/styles.css
@@ -1289,6 +1289,10 @@ border-radius: 8px; */
 
     }
 
+    .feature-img {
+        height: auto !important;
+    }
+
     .faq-container {
         margin: 20px auto 40px;
     }
@@ -1301,6 +1305,7 @@ border-radius: 8px; */
         font-size: 14px;
         padding: 5px 0px;
         justify-content: center;
+        align-items: center;
     }
 
     .small-banner-title {
@@ -1325,6 +1330,11 @@ border-radius: 8px; */
     }
 
     .invest-card {
+        padding: 32px 30px;
+
+    }
+
+    .invest-card-2 {
         padding: 32px 30px;
 
     }
