--- a/css/styles.css
+++ b/css/styles.css
@@ -713,8 +713,13 @@ footer {
     justify-content: space-between;
 }
 
+.article-box a {
+    height: 100%;
+}
+
 .article-box .img-wrapper {
     max-height: 260px;
+    min-height: 260px;
     border-radius: 15px;
     z-index: 1;
 }
@@ -736,7 +741,7 @@ footer {
 .article-box .img-wrapper img {
     border-radius: 15px;
     width: 100%;
-    height: 100%;
+    height: 260px;
     object-fit: cover;
 }
 
@@ -770,6 +775,29 @@ footer {
     font-size: 14px;
     line-height: 24px;
     color: #555555;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+}
+
+.article-blogview-title {
+    color: #000;
+    font-weight: 600;
+
+}
+
+.article-expert-blog {
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #555555;
+}
+
+.blog-viewpage img {
+    border-radius: 20px;
 }
 
 .article-footer {
@@ -1314,6 +1342,11 @@ border-radius: 8px; */
 
     .article-box .img-wrapper {
         max-height: 100%;
+        min-height: auto;
+    }
+
+    .article-box .img-wrap img {
+        height: 100%;
     }
 
     .article-content {
@@ -1362,5 +1395,18 @@ border-radius: 8px; */
         margin-left: auto;
         margin-right: auto;
     }
+
+}
+
+
+.neotoc {
+    padding: 20px;
+    background: #c3bbbb66;
+    border-radius: 20px;
+    margin-bottom: 10px;
+}
+
+.neotoc a {
+    color: #000;
 
 }
